The redirect method example has been updated.

--- a/examples/redirect.html
+++ b/examples/redirect.html
@@ -15,7 +15,8 @@
 
     <div id="status"></div>
     <script>
-        // hideItem('input, input#key, textarea#key1, br, p');
+        // redirect('http://google.com');
+        // redirect('http://google.com', 5);
         redirect('http://google.com', 5, 'input, input#key, textarea#key1');
     </script>
 </body>
