The appendItem method has been changed with the changeContent method.

--- a/examples/actionGet.html
+++ b/examples/actionGet.html
@@ -12,7 +12,7 @@
     <script>
         actionGet('sample.txt', function(response){
             console.log(response);
-            appendItem('#status', response);
+            changeContent('#status', response);
         });
     </script>
 </body>
