--- a/examples/removeItem.html
+++ b/examples/removeItem.html
@@ -17,7 +17,7 @@
     <script>
         // removeItem('input, input#key, textarea#key1, br, p');
         removeItem('input, input#key, textarea#key1, br, p', function(e){
-            appendItem('#status', 'Öğeler silindi.');
+            changeContent('#status', 'Öğeler silindi.');
         });
     </script>
 </body>
