--- a/examples/showItem.html
+++ b/examples/showItem.html
@@ -17,7 +17,7 @@
     <script>
         hideItem('input, input#key, textarea#key1');
         showItem('input, input#key, textarea#key1', function(e){
-            appendItem('#status', 'Öğeler gösterildi.');
+            changeContent('#status', 'Öğeler gösterildi.');
         });
     </script>
 </body>
