--- a/examples/hideItem.html
+++ b/examples/hideItem.html
@@ -17,7 +17,7 @@
     <script>
         // hideItem('input, input#key, textarea#key1, br, p');
         hideItem('input, input#key, textarea#key1, br, p', function(e){
-            appendItem('#status', 'Öğeler gizlendi.');
+            changeContent('#status', 'Öğeler gizlendi.');
         });
     </script>
 </body>
