--- a/examples/redirect.html
+++ b/examples/redirect.html
@@ -8,16 +8,16 @@
     <script src="../src/mind.js"></script>
 </head>
 <body>
+    <h2></h2>
     <input type="text"><br>
     <input id="key" type="text"><br>
     <textarea id="key1" cols="30" rows="10"></textarea><br>
     <p><textarea id="key1" cols="30" rows="10"></textarea></p>
-
     <div id="status"></div>
     <script>
         // redirect('http://google.com');
         // redirect('http://google.com', 5);
-        redirect('http://google.com', 5, 'input, input#key, textarea#key1');
+        redirect('http://google.com', 5, 'h2, input, input#key, textarea#key1');
     </script>
 </body>
 </html>
