--- a/examples/appendItem.html
+++ b/examples/appendItem.html
@@ -10,10 +10,12 @@
 <body>
     <div id="status"></div>
     <span id="status"></span>
+    <hr>
     <div id="status1"></div>
     <script>
-        appendItem("#status", 'Hello World!');
+        appendItem("#status", 'Hello World!<br>');
         appendItem("#status1", 'Hello World! 1');
+        appendItem("#status", 'Hello World! 1');
     </script>
 </body>
 </html>
