mind.js was upgraded to version 1.1.2.

--- a/examples/actionPost.html
+++ b/examples/actionPost.html
@@ -20,7 +20,7 @@
     <div id="status"></div>
     <script>
         clickItem('button, a#save', function(){
-            actionPost('../../form/api/form', formSerialize('form'), function(response){
+            actionPost('../../form/api/form', 'form', function(response){
                 console.log(response);
                 changeContent('#status', response);
             });
