--- a/examples/copyItem.html
+++ b/examples/copyItem.html
@@ -58,6 +58,9 @@
     </div>
     <script>
         clickItem('button', function(){
+            //removeItem('#example div.form-group select');
+            //copyItem('#elements div.form-group select', '#example');
+
             removeItem('#example div.form-group');
             copyItem('#elements div.form-group', '#example');
         })
