copyItem() test file updated.

--- a/examples/copyItem.html
+++ b/examples/copyItem.html
@@ -76,7 +76,7 @@
     </div>
     <script>
         clickItem('button', function(){
-            //removeItem('#example div.form-group select');
+            //removeItem('#example select');
             //copyItem('#elements div.form-group select', '#example');
 
             removeItem('#example div.form-group');
