mind.js was upgraded to version 1.1.7.

--- a/examples/getLocation.html
+++ b/examples/getLocation.html
@@ -18,9 +18,10 @@
 
         getLocation('input, input#key, textarea#key1, #status');
         
-        // getLocation('', function(position){
-        //    console.log(position.coords.latitude);
-        // });
+        //getLocation('', function(position){
+        //    console.log('Latitude: '+position.coords.latitude);
+        //    console.log('Longitude:'+position.coords.longitude);
+        //});
         
         // getLocation('input, input#key, textarea#key1', function(position){
         //    console.log(position.coords.latitude);
