mind.js was upgraded to version 1.2.0.

--- a/examples/is_function.html
+++ b/examples/is_function.html
@@ -12,7 +12,7 @@
     <div id="example"></div>
     <script>
         
-        if(is_function('getContent')){
+        if(is_function(getContent)){
             changeContent('#example', 'Bu isimle tanımlanmış bir fonksiyon vardır.');
         } else {
             changeContent('#example', 'Bu isimle tanımlanmış bir fonksiyon yoktur.');
