--- a/examples/imageInsert.html
+++ b/examples/imageInsert.html
@@ -13,54 +13,55 @@
     <br>
     <div></div>
     <br>
-    <strong style="color: green;" id="success"></strong><br>
-    <strong style="color: red;" id="error"></strong><br><hr>
+    <strong id="status"></strong><br>
+    <strong id="status1"></strong><br>
     <style>
         .img-thumbnail{
             object-fit: cover;
-            width: 100px;
-            height: 100px;
-            border-radius: 100px;
-            margin:2px;
+            width: 200px;
+            height: 200px;
+            border-radius: 200px;
+            margin:10px;
         }
     </style>
     <script>
         let options = {
-            'size':{
-                'byte':512000, // byte cinsinden en fazla boyut
-                'total':2 // En fazla seçilebilecek görsel adedi
+            'input':'input#file, input#files',  // *
+            'output':'div',                     // *
+            'rule':{
+                'byte':512000,
+                'total':3,
+                'type':['image/png', 'image/gif', 'image/jpeg']
             },
-            'error':{
-                'type':{
-                    'element':'strong#error', // Görsel olmayan seçimlere ilişkin hata mesajının yansıtılacağı element(ler)
-                    'message':'Sadece görseller seçilebilir.', // Görsel olmayan seçimlere ilişkin mesaj
-                },
-                'byte':{
-                    'element':'strong#error', // Büyük boyutlu görsel seçimlerine ilişkin hata mesajının yansıtılacağı element(ler)
-                    'message': 'En fazla 500 KB boyutunda görsel(ler) seçilebilir.' // Büyük boyutlu seçimlere ilişkin mesaj
-                },
-                'total':{
-                    'element':'strong#error', // Belirtilen adedi aşan görsel seçimlerine ilişkin hata mesajının yansıtılacağı element(ler)
-                    'message':'En fazla 2 adet görsel seçilebilir.' // Belirtilen adedi aşan seçimlere ilişkin hata mesajı
-                }
-            },
-            'success':{
-                'element':'strong#success', // İşlemin başarılı şekilde gerçekleştiğinin yansıtıldığı element(ler)
-                'message':'Görseller seçildi.' // İşlemin başarılı olduğunu belirten mesaj
-            },
-            'input':'input#file, input#files', // Görsel(ler)in seçileceği input(lar)
-            'output':'div', // Görsel(ler)in yükleneceği element(ler)
-            'imageAttr':[
+            'elementAttr':[
                 {
-                    'name':'class', // Görsel element(ler)ine tanımlanması istenen özellik adı
-                    'value':'img-thumbnail' // Görsel element(ler)ine atanan özelliğin değer(ler)i
+                    'name':'class',
+                    'value':'img-thumbnail'
                 },
                 {
                     'name':'style', 
                     'value':'border-right: 5px solid #aaa;'
                 }
-            ]
-            
+            ],
+            'success':{
+                'element':'strong#status', 
+                'message':'Dosyalar seçildi'
+            },
+            'error':{
+                'type':{
+                    'element':'strong#status', 
+                    'message':'Sadece görseller seçilebilir.',
+                },
+                'byte':{
+                    'element':'strong#status1', 
+                    'message': 'Belirtilen dosya boyut sınırı aşılmamalıdır.' 
+                },
+                'total':{
+                    'element':'strong#status',
+                    'message':'En fazla 3 adet dosya seçilebilir.'
+                }
+            }
+                            
         };
 
         changeItem('input', function(e){
